# product_catalog

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/init/: 01_init.sql
src/: main.rs
src/application/dto/: create_product_request.rs
src/application/usecase/: product_catalog_use_case.rs
src/domain/entity/: product.rs
src/infrastructure/cache/: cache_provider.rs  redis_cache.rs
src/infrastructure/database/: product_repository.rs
