[package]
name = "product_catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"
async-trait = "0.1"
redis = { version = "0.32", features = ["tokio-comp"] }
tower = "0.5"
http-body-util = "0.1"